[gd_scene load_steps=7 format=3 uid="uid://b0x3kl765djv1"]

[ext_resource type="Script" path="res://chat_moa.gd" id="1_mjsig"]
[ext_resource type="FontFile" uid="uid://qgq1y000pv10" path="res://files/NotoSansJP-Regular.ttf" id="2_gh1vs"]
[ext_resource type="Material" uid="uid://haiuo58tqyva" path="res://files/new_shader_material.tres" id="2_lwvqm"]
[ext_resource type="Texture2D" uid="uid://vyvje5jg08sn" path="res://images/128_0001.jpg" id="2_m35gw"]
[ext_resource type="Texture2D" uid="uid://b2afdki8n155w" path="res://images/128_0014.jpg" id="4_blvpg"]

[sub_resource type="LabelSettings" id="LabelSettings_6qyb2"]
font_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjsig")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
current_tab = 0

[node name="Mixture-of-Agents" type="VBoxContainer" parent="MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer7"]
layout_mode = 2
text = "User"

[node name="WebLabel" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Non English Paste is broken on Web Version Chrome,but other can't paste anyting"
horizontal_alignment = 2

[node name="OldAgentContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1.0"

[node name="SystemLineEdit1" type="LineEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "You are a seasoned data scientist"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1.5 Flash"

[node name="SystemLineEdit2" type="LineEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/OldAgentContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "you are gifted game creator"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputEdit" type="TextEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_gh1vs")
text = "What is the best way to generate ideas? Please tell us your rolled character way of thinking and methods, rather than the general method."
wrap_mode = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer5"]
layout_mode = 2
text = "Cycle"

[node name="CycleOptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer5"]
layout_mode = 2
selected = 1
item_count = 5
popup/item_0/text = "1"
popup/item_0/id = 1
popup/item_1/text = "2"
popup/item_1/id = 2
popup/item_2/text = "3"
popup/item_2/id = 3
popup/item_3/text = "4"
popup/item_3/id = 4
popup/item_4/text = "5"
popup/item_4/id = 5

[node name="SendButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer5"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Ask"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2

[node name="MessagesOptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer6"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4/VBoxContainer"]
visible = false
layout_mode = 2
text = "1.0"

[node name="TextEditA" type="TextEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_gh1vs")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4/VBoxContainer2"]
visible = false
layout_mode = 2
text = "Flash"

[node name="TextEditB" type="TextEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer4/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_gh1vs")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2
text = "Final"

[node name="FinishedLabel" type="Label" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyb2")

[node name="MainModelOptionButton" type="OptionButton" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2

[node name="ReFinalButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "Re Final thought"

[node name="SummarizeButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "summarize "

[node name="PickoneButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "Pick Best"

[node name="TranslateButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "TransJP"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResponseEdit" type="TextEdit" parent="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1

[node name="WebCopyContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Mixture-of-Agents"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="WebResultDownloadButton" type="Button" parent="MarginContainer/TabContainer/Mixture-of-Agents/WebCopyContainer"]
visible = false
layout_mode = 2
text = "Download Text(Because Web Copy is broken on itch.io)"

[node name="AgentSettings" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2"]
layout_mode = 2
text = "Agents"

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2"]
layout_mode = 2
text = "Max"

[node name="MaxAgentOptionButton" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="SetHelpfulAssistantButton" type="Button" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Set Helpfull assistant All"

[node name="ReloadButton" type="Button" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "ReLoad"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2

[node name="AgentContainer1" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton1" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer1"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer1"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_m35gw")

[node name="TextEdit1" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer1"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="AgentContainer2" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer2"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer2"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_m35gw")

[node name="TextEdit2" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer2"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="AgentContainer3" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton3" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer3"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer3"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_blvpg")

[node name="TextEdit3" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer3"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="AgentContainer4" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton4" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer4"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer4"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_m35gw")

[node name="TextEdit4" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer4"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="AgentContainer5" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton5" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer5"]
layout_mode = 2

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer5"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_m35gw")

[node name="TextEdit5" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer5"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="AgentContainer6" type="VBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3"]
layout_mode = 2

[node name="OptionButton6" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer6"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer6"]
material = ExtResource("2_lwvqm")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_m35gw")

[node name="TextEdit6" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer3/AgentContainer6"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
wrap_mode = 1
autowrap_mode = 1

[node name="LineEdit1" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
text = "You are gifted game creator."

[node name="LineEdit3" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
text = "You are a graphic designer creating a visual identity for a brand"

[node name="LineEdit4" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
text = "You are a musician composing a piece of music in a specific genre."

[node name="LineEdit5" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
text = "You are a marketing consultant advising a client on their social media strategy."

[node name="LineEdit6" type="LineEdit" parent="MarginContainer/TabContainer/AgentSettings"]
visible = false
layout_mode = 2
text = "You are a historian researching  of the Rome Empire"

[node name="Label5" type="Label" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2
text = "Pronpt(must contain {response})"

[node name="ProposersPromptTextEdit" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_gh1vs")

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2
text = "Final"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2
text = "Role"

[node name="FinalAssistantTextEdit" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gh1vs")
text = "you are a helpful assistant"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer4"]
layout_mode = 2
text = "Prompt (must contain {response})"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MainPromptOptionButton" type="OptionButton" parent="MarginContainer/TabContainer/AgentSettings/HBoxContainer4/HBoxContainer"]
layout_mode = 2

[node name="FinalPromptTextEdit" type="TextEdit" parent="MarginContainer/TabContainer/AgentSettings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_gh1vs")

[node name="APIKeys" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2
text = "API Keys"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2
text = "Groq API Key　"

[node name="WebErrorLabel" type="Label" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2
text = "If key error happen Reload Page and paste again."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2

[node name="APIKeyLineEdit" type="LineEdit" parent="MarginContainer/TabContainer/APIKeys/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="APIKeyButton" type="Button" parent="MarginContainer/TabContainer/APIKeys/HBoxContainer"]
layout_mode = 2
text = "Store key to .env.json"

[node name="AppContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/AppContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/APIKeys/AppContainer/HBoxContainer"]
layout_mode = 2
text = "Step1:"

[node name="OpenUrlButton" type="Button" parent="MarginContainer/TabContainer/APIKeys/AppContainer/HBoxContainer"]
layout_mode = 2
text = "https://console.groq.com/keys"

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/AppContainer/HBoxContainer"]
layout_mode = 2
text = "- click button or input url"

[node name="Label5" type="Label" parent="MarginContainer/TabContainer/APIKeys/AppContainer"]
layout_mode = 2
text = "Step2:Create API Key and copy and paste above box"

[node name="Label4" type="Label" parent="MarginContainer/TabContainer/APIKeys/AppContainer"]
layout_mode = 2
text = "Don't git add or share .env.json ( there no env control api on godot I use json)"

[node name="Label6" type="Label" parent="MarginContainer/TabContainer/APIKeys/AppContainer"]
layout_mode = 2
text = "you can delete api key anytime from above url."

[node name="WebContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/APIKeys"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2
text = "Only Tested Chrome browser.Sadly Clipboard broken on itch.io"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer2"]
layout_mode = 2
text = "Step 1: go groq api page and copy api key."

[node name="OpenUrlButton" type="Button" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer2"]
layout_mode = 2
text = "https://console.groq.com/keys"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer"]
layout_mode = 2
text = "Step 2: click button to download file."

[node name="WebDownloadButton" type="Button" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer"]
layout_mode = 2
text = "Download Json"

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer"]
layout_mode = 2
text = "write api key and drop file somewhere."

[node name="WebDownloadTextEdit" type="TextEdit" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "{
\"groq_api_key\":\"\"
}"
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer3"]
layout_mode = 2
text = "Step 3: open downloaded json with editor and paste api key inside double quote."

[node name="WebDownloadTextEdit2" type="TextEdit" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "{
\"groq_api_key\":\"example-aaaaa-bbbb-cccc-dddd\"
}"
editable = false

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer4"]
layout_mode = 2
text = "Step 4: save a file to diks.After that drag and drop the file to this window"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/TabContainer/APIKeys/WebContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer5"]
layout_mode = 2
text = "Step 5: check top api key filled ** and change Mixture-of-Agents Tab"

[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer5/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer6/MessagesOptionButton" to="." method="_on_messages_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3/MainModelOptionButton" to="." method="_on_main_model_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3/ReFinalButton" to="." method="_on_re_final_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3/SummarizeButton" to="." method="_on_summarize_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3/PickoneButton" to="." method="_on_pickone_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/HBoxContainer3/TranslateButton" to="." method="_on_translate_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Mixture-of-Agents/WebCopyContainer/WebResultDownloadButton" to="." method="_on_web_result_download_button_pressed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/AgentSettings/HBoxContainer2/MaxAgentOptionButton" to="." method="_on_max_agent_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/TabContainer/AgentSettings/HBoxContainer2/HBoxContainer/SetHelpfulAssistantButton" to="." method="_on_set_helpful_assistant_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/AgentSettings/HBoxContainer2/HBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="item_selected" from="MarginContainer/TabContainer/AgentSettings/HBoxContainer4/HBoxContainer/MainPromptOptionButton" to="." method="_on_main_prompt_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/TabContainer/APIKeys/HBoxContainer/APIKeyButton" to="." method="_on_api_key_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/APIKeys/AppContainer/HBoxContainer/OpenUrlButton" to="." method="_on_open_url_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer2/OpenUrlButton" to="." method="_on_open_url_button_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/APIKeys/WebContainer/HBoxContainer/WebDownloadButton" to="." method="_on_web_download_button_pressed"]
